update and delete data in the database from the console level